# MIDI-Controller

./: CMakeLists.txt  OLED_I2C.c  OLED_I2C.h  OLED_font.h  adc.c  adc.h  buffer.c  buffer.h  encoder.c  encoder.h  keypad.c  keypad.h  main.c  menu.c  menu.h  metronome.c  metronome.h  midi.c  midi.h  param.h  pwm.c  pwm.h  usb_descriptors.c
OLED_SH1106/: OLED_I2C.c  OLED_I2C.h  main.c  menu.c  menu.h
oled/: CMakeLists.txt  OLED_I2C.c  OLED_I2C.h  OLED_font.h  encoder.c  encoder.h  main.c  menu.c  menu.h
prototype/: CMakeLists.txt  main.c
prototypeV2/: CMakeLists.txt  adc.c  adc.h  buffer.c  buffer.h  keypad.c  keypad.h  main.c  midi.c  midi.h  usb_descriptors.c
test_scripts/adc_test/: CMakeLists.txt  main.c
test_scripts/encoder_test/: CMakeLists.txt  main.c
test_scripts/shift_test/: CMakeLists.txt  main.c
